--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url='https://www.vegbowl.app'" />
-  <title>Redirecting…</title>
+  <!-- Change the content URL to your actual App Store link -->
+  <meta http-equiv="refresh"
+        content="0; url='https://apps.apple.com/us/app/vegbowl/id6746657736?itscg=30200&itsct=apps_box_link&mttnsubad=6746657736'">
+  <title>Opening App Store…</title>
 </head>
 <body>
-  <p>Redirecting to our site. If you are not redirected automatically, <a href="https://www.vegbowl.app">click here</a>.</p>
+  <p>
+    Opening the App Store…<br>
+    If you’re not redirected, <a href="https://apps.apple.com/us/app/vegbowl/id6746657736?itscg=30200&itsct=apps_box_link&mttnsubad=6746657736">
+    click here</a>.
+  </p>
 </body>
 </html>
