--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Change the content URL to your actual App Store link -->
   <meta http-equiv="refresh"
         content="0; url='https://apps.apple.com/us/app/vegbowl/id6746657736?itscg=30200&itsct=apps_box_link&mttnsubad=6746657736'">
-  <title>Opening App Store…</title>
+  <title>VegBowl iOS App</title>
 </head>
 <body>
   <p>
