--- a/index.html
+++ b/index.html
@@ -2,48 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>VegBowl iOS App</title>
-  <!-- Delay redirect by 3 seconds to let users read the message -->
-  <meta http-equiv="refresh" content="3; url='https://apps.apple.com/us/app/vegbowl/id6746657736?itscg=30200&itsct=apps_box_link&mttnsubad=6746657736'">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Open your bowl in VegBowl</title>
+
+  <!-- Smart App Banner (record-ID injected by JS) -->
+  <script>
+    const recordID = location.pathname.split('/').pop();
+    const deepLink = `https://links.vegbowl.app/shared-bowl/${recordID}`;
+    const meta = document.createElement('meta');
+    meta.name = 'apple-itunes-app';
+    meta.content = `app-id=6746657736, app-argument=${deepLink}`;
+    document.head.appendChild(meta);
+  </script>
+
+  <!-- Gentle auto-redirect after 3 s -->
+  <meta http-equiv="refresh"
+        content="3;url=https://apps.apple.com/us/app/vegbowl/id6746657736">
+
   <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      background: linear-gradient(135deg, #8fcbe9, #1976d2);
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-    }
-    h1 {
-      margin-bottom: 0.5rem;
-      font-size: 2rem;
-    }
-    p {
-      margin: 0.5rem 0 1rem;
-      line-height: 1.4;
-    }
-    a.button {
-      display: inline-block;
-      padding: 0.75rem 1.5rem;
-      background: #fff;
-      color: #1976d2;
-      text-decoration: none;
-      border-radius: 0.5rem;
-      font-weight: bold;
-    }
+    :root { font-family:-apple-system, BlinkMacSystemFont, sans-serif; }
+    body  { display:flex;flex-direction:column;align-items:center;
+            justify-content:center;height:100vh;margin:0;
+            text-align:center;background:linear-gradient(135deg,#8fcbe9,#1976d2);
+            color:#fff;padding:1rem;}
+    h1   { font-size:2rem;margin:.5rem 0;}
+    a.btn{padding:.75rem 1.5rem;border-radius:.5rem;font-weight:600;
+          background:#fff;color:#1976d2;text-decoration:none;}
   </style>
 </head>
 <body>
-  <h1>VegBowl is loading…</h1>
-  <p>Redirecting you to the App Store.<br>If you’re not redirected in a few seconds,</p>
-  <a class="button" href="https://apps.apple.com/us/app/vegbowl/id6746657736?itscg=30200&itsct=apps_box_link&mttnsubad=6746657736">
-    Download VegBowl
+  <h1>Your bowl is ready 🥗</h1>
+  <p>Get VegBowl to open it.<br>
+     After install, just tap this link again.</p>
+  <a class="btn"
+     href="https://apps.apple.com/us/app/vegbowl/id6746657736">
+     Download VegBowl free
   </a>
+  <p style="margin-top:1.5rem;font-size:.85rem;opacity:.8;">
+     Already installed? <a href="#" style="color:#fff;text-decoration:underline;"
+       onclick="location.href=deepLink;return false;">Open in VegBowl</a>
+  </p>
 </body>
 </html>
