--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <meta property="og:type"        content="website">
   <meta property="og:url"         content="https://links.vegbowl.app/shared-bowl/{{RECORD_ID}}">
   <meta property="og:title"       content="Someone shared a VegBowl with you!">
-  <meta property="og:description" content="Install VegBowl to view, edit, and save protein-packed bowls.">
+  <meta property="og:description" content="Customize this bowl in the VegBowl app.">
   <meta property="og:image"       content="https://links.vegbowl.app/logo.png">
 
   <meta name="twitter:card"        content="summary_large_image">
   <meta name="twitter:title"       content="Someone shared a VegBowl with you!">
-  <meta name="twitter:description" content="Install VegBowl then tap the link again to accept.">
+  <meta name="twitter:description" content="Customize this bowl in the VegBowl app.">
   <meta name="twitter:image"       content="https://links.vegbowl.app/logo.png">
 
   <style>
