--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="apple-itunes-app"
+      content="app-id=6746657736,
+               app-argument=https://links.vegbowl.app/shared-bowl/{{RECORD_ID}}">
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Accept your shared VegBowl</title>
@@ -53,16 +57,17 @@
   </style>
 </head>
 <body>
-  <h1>Someone shared a bowl with you! 🥗</h1>
+<h1>Someone shared a bowl with you! 🥗</h1>
 
-  <p class="step"><strong>Step&nbsp;1:</strong> Install VegBowl using the button below.</p>
+<p class="step"><strong>Step&nbsp;1:</strong> Tap <em>Download on the App&nbsp;Store</em> to install VegBowl.</p>
 
-  <a href="https://apps.apple.com/us/app/vegbowl/id6746657736?itscg=30200&itsct=apps_box_badge&mttnsubad=6746657736">
-    <img
-      src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us?releaseDate=1749513600"
-      alt="Download on the App Store">
-  </a>
+<a href="https://apps.apple.com/us/app/vegbowl/id6746657736?itscg=30200&itsct=apps_box_badge&mttnsubad=6746657736">
+  <img
+    src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us?releaseDate=1749513600"
+    alt="Download on the App Store">
+</a>
 
-  <p class="step"><strong>Step&nbsp;2:</strong> Return to your messages and tap the shared link to accept the bowl.</p>
+<p class="step"><strong>Step&nbsp;2:</strong> After installing, tap <em>Open</em> above.<br>
+If you don’t see that button, go back to your messages and tap the bowl link again.</p>
 </body>
 </html>
