--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <title>Accept your shared VegBowl</title>
 
   <!-- Open Graph / Twitter tags … (unchanged) -->
-  <meta property="og:type"        content="website">
-  <meta property="og:url"         content="https://links.vegbowl.app/shared-bowl/{{RECORD_ID}}">
-  <meta property="og:title"       content="Someone shared a VegBowl with you!">
-  <meta property="og:description" content="Customize this bowl in the VegBowl app.">
-  <meta property="og:image"       content="https://links.vegbowl.app/logo.png">
+<meta property="og:type"        content="website">
+<meta property="og:url"         content="https://links.vegbowl.app/shared-bowl/{{RECORD_ID}}">
+<meta property="og:title"       content="Your friend shared a VegBowl!">
+<meta property="og:description" content="Open it in the VegBowl app to customize and save your bowl.">
+<meta property="og:image"       content="https://links.vegbowl.app/logo.png">
 
-  <meta name="twitter:card"        content="summary_large_image">
-  <meta name="twitter:title"       content="Someone shared a VegBowl with you!">
-  <meta name="twitter:description" content="Customize this bowl in the VegBowl app.">
-  <meta name="twitter:image"       content="https://links.vegbowl.app/logo.png">
+<meta name="twitter:card"       content="summary_large_image">
+<meta name="twitter:title"      content="Your friend shared a VegBowl!">
+<meta name="twitter:description"content="Open it in the VegBowl app to customize and save your bowl.">
+<meta name="twitter:image"      content="https://links.vegbowl.app/logo.png">
 
   <style>
     :root { font-family: -apple-system, BlinkMacSystemFont, sans-serif; }
@@ -59,7 +59,7 @@
 <body>
 <h1>Someone shared a bowl with you! 🥗</h1>
 
-<p class="step"><strong>Step&nbsp;1:</strong> Tap <em>Download on the App&nbsp;Store</em> to install VegBowl.</p>
+<p class="step"><strong>Step 1:</strong> Install VegBowl—tap <em>Download on the App Store</em>.</p>
 
 <a href="https://apps.apple.com/us/app/vegbowl/id6746657736?itscg=30200&itsct=apps_box_badge&mttnsubad=6746657736">
   <img
@@ -67,7 +67,6 @@
     alt="Download on the App Store">
 </a>
 
-<p class="step"><strong>Step&nbsp;2:</strong> After installing, tap <em>Open</em> above.<br>
-If you don’t see that button, go back to your messages and tap the bowl link again.</p>
+<p class="step"><strong>Step 2:</strong> Return to your messages and tap the <strong>shared bowl link</strong> again—VegBowl will open it.</p>
 </body>
 </html>
