--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </style>
 </head>
 <body>
-<h1>Someone shared a bowl with you! 🥗</h1>
+<h1>Your friend shared a bowl with you! 🥗</h1>
 
 <p class="step"><strong>Step 1:</strong> Install VegBowl—tap <em>Download on the App Store</em>.</p>
 
