--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="apple-itunes-app"
       content="app-id=6746657736,
-               app-argument=https://get.vegbowl.app/shared-bowl/{{RECORD_ID}}">
+               app-argument=https://share.vegbowl.app/shared-bowl/{{RECORD_ID}}">
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,15 +11,15 @@
 
   <!-- Open Graph / Twitter tags … (unchanged) -->
 <meta property="og:type"        content="website">
-<meta property="og:url"         content="https://get.vegbowl.app/shared-bowl/{{RECORD_ID}}">
+<meta property="og:url"         content="https://share.vegbowl.app/shared-bowl/{{RECORD_ID}}">
 <meta property="og:title"       content="Your friend shared a VegBowl!">
 <meta property="og:description" content="Open it in the VegBowl app to customize and save your bowl.">
-<meta property="og:image"       content="https://get.vegbowl.app/logo.png">
+<meta property="og:image"       content="https://share.vegbowl.app/logo.png">
 
 <meta name="twitter:card"       content="summary_large_image">
 <meta name="twitter:title"      content="Your friend shared a VegBowl!">
 <meta name="twitter:description"content="Open it in the VegBowl app to customize and save your bowl.">
-<meta name="twitter:image"      content="https://get.vegbowl.app/logo.png">
+<meta name="twitter:image"      content="https://share.vegbowl.app/logo.png">
 
   <style>
     :root { font-family: -apple-system, BlinkMacSystemFont, sans-serif; }
