--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
 <h1>Your friend shared a bowl with you! 🥗</h1>
 
-<p class="step"><strong>Step 1:</strong> Install VegBowl—tap <em>Download on the App Store</em>.</p>
+<p class="step"><strong>Step 1:</strong> Install (or update) VegBowl—tap <em>Download on the App Store</em>.</p>
 
 <a href="https://apps.apple.com/us/app/vegbowl/id6746657736?itscg=30200&itsct=apps_box_badge&mttnsubad=6746657736">
   <img
